--- a/public/employee.html
+++ b/public/employee.html
@@ -21,18 +21,20 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">Welcome, </a>
+            <a class="navbar-brand" href="/">Welcome!</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <img src="img/logo.png" style="height:50px;">
         </div>
     </nav>
     <div class="container">
         <div class="row">
             <div class="col">
-                <strong><h2>Skills: <span id="skillsDump"></span></h2></strong>
-                <div id="well-section">
+                <div id="well-section" style="color:#fff">
+                    <strong><h2>Skills: <span id="skillsDump"></span></h2></strong>
+
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#updateModal">
                         Update Employee Info</button>
                 </div>
