--- a/public/login.html
+++ b/public/login.html
@@ -23,6 +23,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-9 col-lg-8 mx-auto">
+              <img src="img/logo.png"style="width:100%;">
               <h3 class="login-heading mb-4">Welcome back!</h3>
               <form>
                 <div class="form-label-group">
