--- a/public/employee.html
+++ b/public/employee.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
@@ -23,95 +21,98 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">Welcome, </a>
+            <a class="navbar-brand" id = "welcome" href="#">Welcome, </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Do Something</a>
-                        <!-- Here's the magic. Add the .animate and .slide-in classes to your .dropdown-menu and you're all set! -->
-                        <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Search For Job</a>
-                            <a class="dropdown-item" href="#">Update/View Profile</a>
-                            <!-- <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a> -->
-                        </div>
-                    </li>
-                </ul>
-            </div>
         </div>
     </nav>
 
-     <!-- Register modal -->
-     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#registerModal">
-        Register
-    </button>
-
-    <!-- modal 2 -->
-    <!-- Update modal -->
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#updateModal">Update A Listing</button>
 
 
+    <div class="container">
+        <div class="row">
+          <div class = "col-md-6">
+          <div class="card" style="width: 30rem; margin-top: 50px; margin-left: 80px; margin-right: 10px;">
+          <img class="card-img-top" src="img/poor.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Welcome Employee!</h5>
+            <p class="card-text">You can upload and update your profile. Just wait quietly for jobs coming! </p>
+          </div>
+          <ul class="list-group list-group-flush" id="well-section" style= "align-items: center">
+            <li class="list-group-item">  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#updateModal">
+                  Update Employee Info</button>
+                </li>
+          </ul>
+         </div>
 
-    <!-- Register Modal -->
-    <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="registerModalLabel"
+              </div>
+
+        <div class = "col-md-6">
+
+          <div class="card" style="width: 40rem; margin-top: 50px; margin-left:0px;">
+            <div class ="card-body" ><h5>Your Profile</h5></div>
+              <ul class="list-group list-group-flush" id="skillsDump">
+              </ul>
+
+        </div>
+        </div>
+    </div>
+
+
+
+
+    <!-- update modal -->
+    <div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="updateModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="registerModalLabel">Sign up as a new employee</h5>
+                    <h5 class="modal-title" id="updateModalLabel">Update Current Job Listing</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
                     <div class="well well-sm">
-                        <form class="form-horizontal" method="post">
+                        <form class="form-horizontal" method="put" id="cms">
                             <fieldset>
-                                <legend class="text-center header">Register</legend>
-
+                                <legend class="text-center header">Update your employee profile</legend>
                                 <div class="form-group">
                                     <div class="col-md-12">
-                                        <input id="userName" name="userName" type="text" placeholder="User Name"
+                                        <input id="name" name="name" type="text" placeholder="Update Your Name"
                                             class="form-control">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <div class="col-md-12">
-                                        <input id="password" name="password" type="text" placeholder="Password"
+                                        <select class="form-control" id="dropdown-jobs-list" name="dropdown-jobs-list"></select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-md-12">
+                                        <select class="form-control dropdown-skill-list" name="skill_ids[]"></select>
+                                        <br>
+                                        <button type="button" class="btn btn-primary" id="anotherSkill">Choose another skill</button>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-md-12">
+                                        <input id="email" name="email" type="text" placeholder="Update Contact Info"
                                             class="form-control">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <div class="col-md-12">
-                                        <input id="jobTitle" name="jobTitle" type="text" placeholder="Job Title"
-                                            class="form-control">
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    <div class="col-md-12">
-                                        <input id="email" name="email" type="text" placeholder="Email Address"
-                                            class="form-control">
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    <div class="col-md-12">
-                                        <textarea class="form-control" id="bio" name="bio"
-                                            placeholder="Enter your bio here."
+                                        <textarea class="form-control" id="bio" name="bio" placeholder="Update Bio."
                                             rows="7"></textarea>
                                     </div>
                                 </div>
-
                                 <div class="form-group">
                                     <div class="col-md-12 text-center">
-                                        <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                                        <button type="submit" id="updateEmployee"
+                                            class="btn btn-primary btn-lg">Submit</button>
                                     </div>
                                 </div>
                             </fieldset>
@@ -125,66 +126,7 @@
             </div>
         </div>
     </div>
-
-    <!-- update modal -->
-    <div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="updateModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="updateModalLabel">Update Current Job Listing</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="well well-sm">
-                        <form class="form-horizontal" method="post">
-                            <fieldset>
-                                <legend class="text-center header">Update your employee profile</legend>
-
-                                
-                                <div class="form-group">
-                                    <div class="col-md-12">
-                                        <input id="jobTitle" name="jobTitle" type="text" placeholder="Job Title"
-                                            class="form-control">
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    <div class="col-md-12">
-                                        <input id="email" name="email" type="text" placeholder="Email Address"
-                                            class="form-control">
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    <div class="col-md-12">
-                                        <textarea class="form-control" id="bio" name="bio"
-                                            placeholder="Enter your massage for us here. We will get back to you within 2 business days."
-                                            rows="7"></textarea>
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    <div class="col-md-12 text-center">
-                                        <button type="submit" class="btn btn-primary btn-lg">Submit</button>
-                                    </div>
-                                </div>
-                            </fieldset>
-                        </form>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
-                </div>
-            </div>
-        </div>
-      </div>
-
-    <script>
-       
-    </script>
+    <script type="text/javascript" src="js/employee.js"></script>
 </body>
 
 </html>
