--- a/public/employer.html
+++ b/public/employer.html
@@ -22,35 +22,48 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">Welcome, </a>
+            <a class="navbar-brand" id = "welcome"href="#">Welcome, </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Do Something</a>
-                        <!-- Here's the magic. Add the .animate and .slide-in classes to your .dropdown-menu and you're all set! -->
-                        <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Post a Job</a>
-                            <a class="dropdown-item" href="#">Update/View Profile</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
         </div>
     </nav>
 
     <!-- Search for Employee button -->
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#employee-search-modal">Search For
+
+
+<div class = "row">
+  <div class = "col-md-6">
+  <div class="card" style="width: 18rem; margin-top: 50px; margin-left: 150px; margin-right: 0px;">
+  <img class="card-img-top" src="img/em.jpg" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Welcome Employer!</h5>
+    <p class="card-text">You can search for employees by the skills. You can also add jobs and skills to the market! </p>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#employee-search-modal">Search For
         Employees</button>
+</li>
+    <li class="list-group-item"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#employee-profile-modal">Add
+        Job</button></li>
+    <li class="list-group-item">  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#employee-skill-modal">Add
+          Skill</button></li>
+  </ul>
+</div>
+</div>
 
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#employee-profile-modal">Add Job</button>
+<div class = "col-md-6">
+  <div class="card" style="width: 40rem; margin-top: 50px; margin-left:0px;">
+    <div class ="card-body" ><h5>Your Search Result</h5></div>
+      <ul class="list-group list-group-flush" id ="results">
+      </ul>
+</div>
 
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#employee-skill-modal">Add Skill</button>
+</div>
+</div>
+
+
 
     <!-- Search for employee modal -->
     <div class="modal fade" id="employee-search-modal" tabindex="-1" role="dialog"
@@ -65,13 +78,14 @@
                 </div>
                 <div class="modal-body">
                     <div class="well well-sm">
-                        <form class="form-horizontal" method="post">
+                        <form class="form-horizontal search" method="post">
                             <fieldset>
                                 <legend class="text-center header">Search by skills</legend>
 
-                                <select class="form-control" id="dropdown-skill-list"></select>
+                                <select class="form-control dropdown-skill-list" name="skill_ids[]"></select>
                                 <br>
-                                <button type="button" class="btn btn-primary" id="anotherSkill">Choose another skill</button>
+                                <button type="button" class="btn btn-primary" id="anotherSkill">Choose another
+                                    skill</button>
 
                                 <div class="form-group">
                                     <div class="col-md-12 text-center">
@@ -90,7 +104,7 @@
     </div>
 
 
-<!-- add job modals-->
+    <!-- add job modals-->
     <div class="modal fade" id="employee-profile-modal" tabindex="-1" role="dialog" aria-labelledby="addjobModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -103,7 +117,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="well well-sm">
-                        <form class="form-horizontal" method="post">
+                        <form class="form-horizontal jobAdd">
                             <fieldset>
                                 <legend class="text-center header">Job Title</legend>
                                 <div class="form-group">
@@ -114,7 +128,7 @@
                                 </div>
                                 <div class="form-group">
                                     <div class="col-md-12 text-center">
-                                        <button id = "addjob" type="submit" class="btn btn-primary btn-lg">Add</button>
+                                        <button id="addjob" type="submit" class="btn btn-primary btn-lg">Add</button>
                                     </div>
                                 </div>
                             </fieldset>
@@ -127,70 +141,120 @@
 
 
     <!-- add skill modals-->
-        <div class="modal fade" id="employee-skill-modal" tabindex="-1" role="dialog" aria-labelledby="addjobModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="registerModalLabel">Add a new Skill!</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="well well-sm">
-                            <form class="form-horizontal" method="post">
-                                <fieldset>
-                                    <legend class="text-center header">Skill Name</legend>
-                                    <div class="form-group">
-                                        <div class="col-md-12">
-                                            <input id="skillname" name="skillname" type="text" placeholder="SkillName"
-                                                class="form-control">
-                                        </div>
+    <div class="modal fade" id="employee-skill-modal" tabindex="-1" role="dialog" aria-labelledby="addjobModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="registerModalLabel">Add a new Skill!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="well well-sm">
+                        <form class="form-horizontal skillAdd" method="post">
+                            <fieldset>
+                                <legend class="text-center header">Skill Name</legend>
+                                <div class="form-group">
+                                    <div class="col-md-12">
+                                        <input id="skillname" name="skillname" type="text" placeholder="SkillName"
+                                            class="form-control">
                                     </div>
-                                    <div class="form-group">
-                                        <div class="col-md-12 text-center">
-                                            <button id = "addskill" type="submit" class="btn btn-primary btn-lg">Add</button>
-                                        </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-md-12 text-center">
+                                        <button id="addskill" type="submit" class="btn btn-primary btn-lg">Add</button>
                                     </div>
-                                </fieldset>
-                            </form>
-                        </div>
+                                </div>
+                            </fieldset>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
 
     <script type="text/javascript">
         $(document).ready(function () {
+          var userName = sessionStorage.getItem("user");
+          $("#welcome").append(userName);
+            function loop(arr) {
+                var skillarr = [];
+                for (var i = 0; i < arr.length; i++) {
+                    skillarr.push(arr[i].skill);
+                }
+                return skillarr;
+            }
 
-            $.get("http://localhost:3000/api/skills", function (data) {
+            $.get("/api/Skills", function (data) {
                 for (var i = 0; i < data.length; i++) {
                     var skill = data[i].skill;
-                    $('#dropdown-skill-list').append('<option>' + skill + '</option>');
+                    var id = data[i].id;
+                    var append = ('<option value = ' + id + '>' + skill + '</option>');
+                    $('.dropdown-skill-list').append(append);
                 };
             });
             // add a new dropdown once a skill from the previous one was selected
             function newDropdown() {
-                $('.dropdown').append('#divNewSkills');
+                $('.dropdown').attr("name", "skill_ids[]").append('#divNewSkills');
             };
 
             $('#anotherSkill').on("click", (function () {
-                var selectList = $('#dropdown-skill-list').clone();
-                $('#dropdown-skill-list').after(selectList);
+                var selectList = $('.dropdown-skill-list:first').clone();
+                $('.dropdown-skill-list:last').after(selectList);
             })
 
-            // append new skills when they're added to database
+                // append new skills when they're added to database
             );
-            $("#addjob").click(function(){
-              var newjob = $("#jobtitle").val();
-              $.post("api/Jobs",newjob).then(back);
+
+            $(document).on("submit", ".search", function (e) {
+                e.preventDefault();
+                $("#results").empty();
+                var array = [];
+                $("select[name='skill_ids[]']").each(function () {
+                    array.push($(this).val());
+                })
+                $.post("/api/query", { skillIds: array }).then(function (response) {
+                    console.log(response);
+                    for (var i = 0; i < response.length; i++) {
+                        $("#results").append(
+                            "<li class = 'list-group-item'>Employee's Name:" +
+                            response[i].name + "</li>" +
+                            "<li class = 'list-group-item'>Job Title: " +
+                            response[i].jobTitle + "</li>"+
+                            "<li class = 'list-group-item'>Skills: " +
+                            loop(response[i].Skills) +"</li>"+
+                            "<li class = 'list-group-item'>Contact Info:" +
+                            response[i].contactInfo +"</li>"+
+                            "<li class = 'list-group-item'>Bio: <p>" +
+                            response[i].bio +
+                            "</p>" +
+                            "</li>"
+                            )
+                    }
+                });
             });
 
-            $("#addskill").click(function(){
-              var newskill = $("skillname").val();
-              $.post("api/Skills",newskill).then(back);
+            $(document).on("submit", ".jobAdd", function (e) {
+                e.preventDefault();
+                var newjob = {
+                    jobTitle: $("#jobtitle").val()
+                }
+                $.post("/api/Jobs", newjob).then(function (response) {
+                    console.log(response);
+                });
+            });
+
+            $(document).on("submit", ".skillAdd", function (e) {
+                e.preventDefault();
+                var newskill = {
+                    skill: $("#skillname").val()
+                }
+                $.post("/api/Skills", newskill).then(function (response) {
+                    console.log(response);
+                });
             });
 
         });
