fixed stupid error

--- a/public/login.html
+++ b/public/login.html
@@ -160,12 +160,12 @@ var newuserinfo;
         if (getlogin.login === true) {
           if (getlogin.status === 0){
             // redirect employee page
-            window.location.replace("http://localhost:3000/employee.html");
+            window.location.replace("/employee.html");
 
           }
           else{
             //redirect employer page
-            window.location.replace("http://localhost:3000/employer.html");
+            window.location.replace("/employer.html");
           }
         }else{
         alert ("Check your input or you just don't exist.Do you want to sign up?")
